[gd_scene load_steps=12 format=3 uid="uid://dn5jx6jfkyswd"]

[ext_resource type="Script" path="res://resources/elevator/elevator.gd" id="1_jprqk"]
[ext_resource type="Texture2D" uid="uid://itsf8akk61vm" path="res://resources/elevator/asset/elevatorShip.png" id="2_ke8ko"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rs78x"]
size = Vector2(63, 6)

[sub_resource type="Animation" id="Animation_ugt2s"]
resource_name = "RESET"

[sub_resource type="Animation" id="Animation_xfhr5"]
resource_name = "down_elevator"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -500), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_e3nt1"]
resource_name = "move_elevator"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -500)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_drwx5"]
_data = {
"RESET": SubResource("Animation_ugt2s"),
"down_elevator": SubResource("Animation_xfhr5"),
"move_elevator": SubResource("Animation_e3nt1")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0a60g"]
size = Vector2(65, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_38tk0"]
size = Vector2(8, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rbr7d"]
size = Vector2(10, 89)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_odnjv"]
size = Vector2(80, 6)

[node name="Node2D" type="Node2D"]

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("1_jprqk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(35.5, 11)
shape = SubResource("RectangleShape2D_rs78x")

[node name="TextureRect" type="TextureRect" parent="Area2D"]
offset_left = -11.0
offset_top = -83.0
offset_right = 89.0
offset_bottom = 17.0
texture = ExtResource("2_ke8ko")
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Area2D"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_drwx5")
}

[node name="StaticBody2D" type="StaticBody2D" parent="Area2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D/StaticBody2D"]
position = Vector2(37.5, 11)
shape = SubResource("RectangleShape2D_0a60g")

[node name="StaticBody2D2" type="StaticBody2D" parent="Area2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D/StaticBody2D2"]
position = Vector2(74, 11.5)
shape = SubResource("RectangleShape2D_38tk0")

[node name="CollideElevator" type="StaticBody2D" parent="Area2D"]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D/CollideElevator"]
position = Vector2(74, -35.5)
shape = SubResource("RectangleShape2D_rbr7d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D/CollideElevator"]
position = Vector2(39, -77)
shape = SubResource("RectangleShape2D_odnjv")

[node name="can_move" type="Timer" parent="."]
wait_time = 8.0

[node name="Start" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
[connection signal="animation_finished" from="Area2D/AnimationPlayer" to="Area2D" method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="can_move" to="Area2D" method="_on_can_move_timeout"]
[connection signal="timeout" from="Start" to="Area2D" method="_on_start_timeout"]
